# sliceit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
sliceit/: __init__.py  cli.py  core.py  display.py
