[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sliceit"
version = "0.1.0"
description = "End-to-end latency breakdown tool — see exactly where your command spends time"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["profiling", "performance", "latency", "cli", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Benchmark",
]

dependencies = [
    "rich>=13.0",
    "psutil>=5.9",
]

[project.scripts]
sliceit = "sliceit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sliceit*"]
